# CMFreg

./: CMakeLists.txt  README.md
ApplyMatrix/: ApplyMatrix.cxx  ApplyMatrix.xml  CMakeLists.txt
ApplyRegistrationMatrix/: ApplyRegistrationMatrix.cxx  ApplyRegistrationMatrix.xml  CMakeLists.txt
Downsize/: CMakeLists.txt  Downsize.cxx  Downsize.xml
Growing/: CMakeLists.txt  Growing.cxx  Growing.xml
LabelAddition/: CMakeLists.txt  LabelAddition.cxx  LabelAddition.xml
LabelExtraction/: CMakeLists.txt  LabelExtraction.cxx  LabelExtraction.xml
LandmarkRegistration/: CMakeLists.txt  CompareVolumes.py  LandmarkRegistration.py
MaskCreation/: CMakeLists.txt  MaskCreation.cxx  MaskCreation.xml
NonGrowing/: CMakeLists.txt  NonGrowing.cxx  NonGrowing.xml
SurfaceICPRegistration/: CMakeLists.txt  SurfaceICPRegistration.py
SurfaceRegistration/: CMakeLists.txt  SurfaceICPRegistration.py  SurfaceRegistration.py  SurfaceRegistrationLogic.py
SurfaceRegistration/Resources/UI/: SurfaceRegistration.ui
trunk/: CMakeLists.txt
trunk/.svn/: all-wcprops  entries
trunk/.svn/text-base/: CMakeLists.txt.svn-base
trunk/Downsize/: CMakeLists.txt  Downsize.cxx  Downsize.xml
trunk/Downsize/.svn/: all-wcprops  entries
trunk/Growing/: CMakeLists.txt  Growing.cxx  Growing.xml
trunk/Growing/.svn/: all-wcprops  entries
trunk/Growing/.svn/text-base/: Growing.xml.svn-base
trunk/LabelAddition/: CMakeLists.txt
trunk/LabelAddition/.svn/: all-wcprops  entries
trunk/LabelAddition/.svn/text-base/: LabelAddition.cxx.svn-base
trunk/LabelExtraction/: CMakeLists.txt
trunk/LabelExtraction/.svn/: all-wcprops  entries
trunk/MaskCreation/: CMakeLists.txt  MaskCreation.cxx
trunk/MaskCreation/.svn/: all-wcprops  entries
trunk/NonGrowing/: CMakeLists.txt  NonGrowing.cxx
trunk/NonGrowing/.svn/: all-wcprops  entries
