CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

PROJECT(CMFreg)

  set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin)
	
  IF(CMFreg_BUILD_SLICER_EXTENSION)
    
    set(EXTENSION_HOMEPAGE "http://www.nitrc.org/plugins/mwiki/index.php/cmfreg:MainPage")
    set(EXTENSION_CATEGORY "Registration")
    set(EXTENSION_CONTRIBUTORS "Vinicius Boen (Univ of Michigan), Manson Winsauer(UNC)")
    set(EXTENSION_DESCRIPTION "Tools package for the cranio-maxillofacial registration")
    set(EXTENSION_ICONURL "http://www.na-mic.org/Wiki/index.php/File:SkulbaseRegistration.png")
    set(EXTENSION_SCREENSHOTS "")
    
    FIND_PACKAGE(SLICER REQUIRED)
      INCLUDE(${Slicer_USE_FILE})

    FIND_PACKAGE(ITK REQUIRED)
    IF (ITK_FOUND)
      INCLUDE(${USE_ITK_FILE})
    ELSE(ITK_FOUND)
      MESSAGE(FATAL_ERROR, "ITK not found. Please set ITK_DIR.")
    ENDIF (ITK_FOUND)

    FIND_PACKAGE(VTK REQUIRED)
    IF (VTK_FOUND)
      INCLUDE(${USE_VTK_FILE})
    ELSE(VTK_FOUND)
      MESSAGE(FATAL_ERROR, "VTK not found. Please set VTK_DIR.")
    ENDIF (VTK_FOUND)

    FIND_PACKAGE(GenerateCLP REQUIRED)
    IF(GenerateCLP_FOUND)
      INCLUDE(${GenerateCLP_USE_FILE})
    ELSE(GenerateCLP_FOUND)
      MESSAGE(FATAL_ERROR, "GenerateCLP not found. Please set GenerateCLP_DIR.")
    ENDIF(GenerateCLP_FOUND)

    include(${Slicer_EXTENSION_CPACK})
  ELSE(CMFreg_BUILD_SLICER_EXTENSION)

    FIND_PACKAGE(ITK REQUIRED)
    IF (ITK_FOUND)
      INCLUDE(${USE_ITK_FILE})
    ELSE(ITK_FOUND)
      MESSAGE(FATAL_ERROR, "ITK not found. Please set ITK_DIR.")
    ENDIF (ITK_FOUND)

    FIND_PACKAGE(VTK REQUIRED)
    IF (VTK_FOUND)
      INCLUDE(${USE_VTK_FILE})
    ELSE(VTK_FOUND)
      MESSAGE(FATAL_ERROR, "VTK not found. Please set VTK_DIR.")
    ENDIF (VTK_FOUND)

    FIND_PACKAGE(GenerateCLP REQUIRED)
    IF(GenerateCLP_FOUND)
      INCLUDE(${GenerateCLP_USE_FILE})
    ELSE(GenerateCLP_FOUND)
      MESSAGE(FATAL_ERROR, "GenerateCLP not found. Please set GenerateCLP_DIR.")
    ENDIF(GenerateCLP_FOUND)
  ENDIF(CMFreg_BUILD_SLICER_EXTENSION)

    SUBDIRS(Growing)
    SUBDIRS(NonGrowing)
    SUBDIRS(Downsize)
    SUBDIRS(LabelAddition)
    SUBDIRS(LabelExtraction)
    SUBDIRS(MaskCreation)
